Update to use URI in the http conduits instead of URL as using a URL can be fairly expensive (particularly in Felix, not so bad in Equinox)
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1367243 13f79535-47bb-0310-9956-ffa450edef68